Fix jumping blocks

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -30,7 +30,7 @@
   }
 }
 
-@media only screen and (max-width: 410px) {
+@media only screen and (max-width: 420px) {
   body>header {
     h2 {
       margin-top: .52em;
